--- a/src/css/common.css
+++ b/src/css/common.css
@@ -10,9 +10,56 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  background: url(../images/background.jpg) no-repeat;
 }
 
 img {
   display: block;
   max-width: 100%;
+}
+
+.video-box {
+  display: flex;
+  justify-content: center;
+  margin-top: 120px;
+}
+
+.main {
+  list-style: none;
+}
+
+.main__item {
+  margin-bottom: 40px;
+}
+
+.main__link {
+  margin-bottom: 20px;
+  text-decoration: none;
+
+  max-width: 100px;
+  padding: 6px 12px;
+
+  border: 0;
+  outline: 0;
+  border-radius: 20px;
+
+  background-color: yellowgreen;
+  text-shadow: 1px 1px 0 hsl(0, 40%, 98%);
+
+  font-size: 14px;
+  font: inherit;
+  font-weight: normal;
+
+  color: #102878;
+  box-shadow: -5px -5px 20px hsl(0, 40%, 98%), 5px 5px 20px #babecc;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+
+.main__link:hover {
+  box-shadow: -2px -2px 5px  hsl(0, 40%, 98%), 2px 2px 5px #babecc;
+}
+
+.main__link:active {
+  box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px  hsl(0, 40%, 98%);
 }
